# zoyd

./: .gitignore  Makefile  PRD.md  README.md  pyproject.toml  zoyd.toml
.github/workflows/: ci.yml
portfolio-staging/zoyd/: index.md
ralph/: __init__.py  cli.py  loop.py  prd.py  progress.py
tests/: __init__.py  _debug_vadd.py  conftest.py  test_cannot_complete.py  test_chat.py  test_config.py  test_context_formatting.py  test_embedding.py  test_jail.py  test_loop.py  test_loop_runner.py  test_prd.py  test_progress.py  test_progress_extraction.py  test_prompt_builder.py  test_prompt_memory.py  test_redis_crud.py  test_redis_integration.py  test_session_integration.py  test_session_logger.py  test_session_models.py  test_session_storage.py  test_tui_banner.py  test_tui_console.py  test_tui_dashboard.py  test_tui_events.py  test_tui_live.py  test_tui_live_markdown.py  test_tui_panels.py  test_tui_progress.py  test_tui_spinners.py  test_tui_status.py  test_tui_task_tree.py  test_tui_theme.py  test_tui_traceback.py  test_vadd_debug.py  test_vectors.py  test_vectors_integration.py
zoyd/: __init__.py  chat.py  cli.py  config.py  jail.py  loop.py  prd.py  progress.py
zoyd/loop/: __init__.py  commit_manager.py  invoke.py  loop.py  prompt_builder.py  prompt_templates.py
zoyd/session/: __init__.py  embedding.py  logger.py  models.py  storage.py  vectors.py
zoyd/session/storage/: __init__.py  factory.py  file.py  helpers.py  redis.py  (+2 more)
zoyd/tui/: __init__.py  banner.py  console.py  dashboard.py  events.py  keyboard.py  live.py  panels.py  progress.py  spinners.py  status.py  task_editor.py  task_tree.py  theme.py  traceback.py
(+6 files in other folders)
