[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ralph"
version = "0.1.0"
description = "Minimal autonomous agent loop for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
ralph = "ralph.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
