[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zoyd"
version = "0.1.0"
description = "Minimal autonomous agent loop for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
zoyd = "zoyd.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
