[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zoyd"
version = "0.667.34"
description = "Minimal autonomous agent loop for Claude Code"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.0",
    "redis>=5.0",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
vectors = [
    "onnxruntime>=1.16",
    "tokenizers>=0.15",
]
dev = [
    "pytest>=7.0",
    "redis>=5.0",
]

[project.scripts]
zoyd = "zoyd.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
